[package]
name = "tm-rust"
version = "0.1.0"
authors = ["Karl Zylinski <karl@ourmachinery.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bindgen = "0.53.1"

[build-dependencies]
bindgen = "0.53.1"
